2007-12-05  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* Main/NSException+Stacktrace.m: added missing symbols from
	NSException.m and NSDebug.m (GNUstep).

	* UI/MainUI/SOGoUserHomePage.m ([SOGoUserHomePage
	-foldersSearchAction]): make use of the new search methods in
	SOGoUserFolder (see below).

	* UI/Contacts/UIxContactFoldersView.m ([-foldersSearchAction]):
	moved method into ../MainUI/SOGoUserHomePage.m.

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-foldersOfType:folderTypeforUID:uid]): only return folders owned
	by the specified user.

2007-12-05  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Mailer/SOGoDraftObject.m: The condition for replyToAll
	has to be done later to avoid duplicated to and cc addresses.

2007-12-04  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder -davCalendarQuery:queryContext]): fixed a leak.

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder -davSubscribe:localContext])
	([SOGoGCSFolder -davUnsubscribe:localContext]): subscribe an
	unsubscribe from DAV-based accesses. We could be compatible with
	Microsoft's extensions but we have no need for a "subcription id",
	so we implement our own.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-POSTAction:localContext]): new method to intercept DAV POSTs,
	which we now use to implement certain custom commands such as
	"subscribe" and "unsubscribe".

	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
	-davNamespaces]): declare the
	"urn:inverse:params:xml:ns:inverse-dav" xml ns.
	([SOGoUserFolder -foldersOfType:folderTypeforUID:uid]): new method
	designed to replace the UIxContactFoldersView.m mechanism for
	displaying folders to subcribe to, as a common code base for both
	Web and DAV-based subscriptions.
	([SOGoUserFolder -foldersOfType:typematchingUID:uid]): same as
	above.
	([SOGoUserFolder -davCollectionQuery:queryContext]): new method
	that implement a custom DAV-based protocol query for querying